[project]
name = "t3-code-puller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.12.1",
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
